ingress-demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: "/foo"
        pathType: Prefix
        backend:
          service:
            name: kube-foo-svc
            port:
              number: 3001
      - path: "/bar"
        pathType: Prefix
        backend:
          service:
            name: kube-bar-svc
            port:
              number: 3002
